--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                     </div>
 
                 </div>
-                <div class="bgrid service-item animate-this">
+<!--                 <div class="bgrid service-item animate-this">
 
                     <span class="icon">
                         <i class="fa fa-briefcase"></i>
@@ -451,7 +451,7 @@
                         </p>
                     </div>
 
-                </div>
+                </div> -->
                 <div class="bgrid service-item animate-this">
 
                     <span class="icon">
@@ -491,7 +491,7 @@
                     </div>
 
                 </div>
-                <div class="bgrid service-item animate-this">
+<!--                 <div class="bgrid service-item animate-this">
 
                     <span class="icon">
                         <i class="fa fa-graduation-cap"></i>
@@ -508,7 +508,7 @@
                         </p>
                     </div>
 
-                </div>
+                </div> -->
                 <!-- end bgrid -->
 
             </div>
