Upstart bug removed

--- a/index.html
+++ b/index.html
@@ -396,12 +396,12 @@
 
                 <div class="bgrid service-item animate-this">
 
-                    <a href="https://www.ecelliitk.org/esummit/upstart/" class="icon">
+                    <a href="https://www.ecelliitk.org/upstart/" class="icon">
                         <i class="icon-arrow-up"></i>
                     </a>
 
                     <div class="service-content">
-                        <a href="https://www.ecelliitk.org/esummit/upstart/">
+                        <a href="https://www.ecelliitk.org/upstart/">
                             <h3 class="h05">UpStart</h3>
                         </a>
 
@@ -648,7 +648,7 @@
                         <div id="03" class='hide'>
                             <h4>UpStart</h4>
                             <p>
-                                <a href="https://www.ecelliitk.org/esummit/upstart/">Details</a>
+                                <a href="https://www.ecelliitk.org/upstart/">Details</a>
                             </p>
                         </div>
                     </div>
